# python_mentoring

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
hw0_intro/: main.py  test_main.py
hw1_numpy_pandas/: main.ipynb
hw2_additional/: README.md  setup.cfg
hw2_additional/src/olympics_utils/: common_queries.py
hw2_additional/tests/: test_common_queries.py
hw2_testing_coverage/: .coveragerc  my_cache.py  my_range.py
hw2_testing_coverage/tests/: test_my_cache.py  test_my_range.py
hw3_profiling/: main.ipynb
hw4_parallel_programming/: im_urls.txt  requirements.txt
hw4_parallel_programming/create_thumbnails/: __main__.py  cli.py
hw5_cmd_args_and_logging/ls/: __main__.py  cli.py  display_utils.py  fs_utils.py
hw6_sockets/: tcp_client.py  tcp_server.py
hw7_regexp/: regex_homework.ipynb
