[metadata]
name = olympics_utils
version = 0.0.1
author = Mikhail Shchukin
author_email = mikhail_shchukin@epam.com
description = Small example package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
